--- a/components/ActionCard/index.module.scss
+++ b/components/ActionCard/index.module.scss
@@ -29,6 +29,11 @@ $color-brand: #3db588;
 		transition: 0s;
 	}
 
+	&.disabled {
+		cursor: not-allowed;
+		opacity: .5;
+	}
+
 	.title {
 		color: $color-brand;
 		font-size: 24px;
