--- a/styles.css
+++ b/styles.css
@@ -105,3 +105,16 @@ a:hover {
     opacity: 1;
     border-bottom: solid 1px #3db588;
 }
+
+th, td {
+    padding: 10px;
+    border: solid 1px rgba(255, 255, 255, .1);
+}
+
+thead {
+    background-color: rgba(255, 255, 255, .1);
+}
+
+table {
+    border-collapse: collapse;
+}
