--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,7 @@ blockquote::before {
 }
 
 #table-of-contents + ul li a {
+    opacity: 1 !important;
     color: #ffffff !important;
     border-bottom: none !important;
     text-decoration: none;
@@ -117,4 +118,12 @@ thead {
 
 table {
     border-collapse: collapse;
+}
+
+img {
+    max-width: 100%;
+    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+        0 1px 10px 0 rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    margin: 10px 0;
 }
