change some things

--- a/components/Button/index.module.scss
+++ b/components/Button/index.module.scss
@@ -23,6 +23,7 @@ $text-on-light: #464c4f;
 	font-size: 16px;
 	margin: 10px;
 	transition: all 120ms;
+	text-decoration: none;
 
 	&:active {
 		background-position: 0 0%;
