--- a/components/_BackButton/index.module.scss
+++ b/components/_BackButton/index.module.scss
@@ -8,6 +8,8 @@
 	color: #ffffff;
 	text-decoration: none;
 	transition: opacity 150ms;
+	margin-top: 5px;
+	margin-bottom: 5px;
 	
 	&:hover {
 		opacity: 1;
