--- a/styles.css
+++ b/styles.css
@@ -44,14 +44,16 @@ code {
     border: solid 1px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
     background-color: rgba(0, 0, 0, 0.2);
-    padding: 8px;
+	padding: 8px;
+	overflow-x: auto;
 }
 
 pre {
     display: inline;
     border-radius: 4px;
     background-color: rgba(0, 0, 0, 0.2);
-    padding: 3px;
+	padding: 3px;
+	overflow-x: auto;
 }
 
 blockquote {
